--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -188,6 +188,7 @@ function openPopup(clipId, selectedText, remainingText) {
                     document.getElementById('clear-file').style.display='flex'
                    
                     document.getElementById(`videoSelect`).value=""
+                    document.getElementById(`videoSelect`).innerHTML=""
                     document.getElementById(`selected_topic`).value=""
                     saveInput(document.getElementById(`videoSelect`))
                     saveInput(document.getElementById(`selected_topic`))
