--- a/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
@@ -1,5 +1,9 @@
 
-<form  action="{{request.path}}" class="popup-content" method="POST" enctype="multipart/form-data" id="add-subclip-form"
+<form   class="popup-content" method="POST" enctype="multipart/form-data"
+ id="add-subclip-form"
+ hx-post="{{ request.path }}" 
+      hx-target="#form-response" 
+      hx-swap="innerHTML"
     style="grid-template-columns: 0.7fr 1fr;width:100%;">
     <br>
     {% csrf_token %}
@@ -63,90 +67,7 @@ document.getElementById('add-subclip-form').addEventListener('submit', (e) => {
     attachValidation('add-subclip-form', clipId);
 })
 
-// function attachValidation(formId, clipId) {
-//     const li = document.getElementById(`current_li_${clipId}`);
-//     if (li) {
-//         li.disabled=true
-//         li.style.cursor='wait'
-//         console.log(li, ' has been disabled');
-//     }
 
-//     const form = document.getElementById(formId);
-    
-//     if (form) {
-//         const fileInput = document.getElementById('slide_file');
-//         const videoSelect = document.getElementById(`videoSelect`);
-
-//         if ((!fileInput.value || fileInput.value.trim() === "") &&
-//             (!videoSelect || !videoSelect.value || videoSelect.value.trim() === "")) {
-//             document.getElementById('error-slide').textContent = 'Select A Clip';
-//             videoSelect.focus();
-//         } else {
-//             const formData = new FormData(form);
-
-//             if (submitCheck){
-//                 submitCheck=false
-//                 document.getElementById('add-subclip-popup').style.display = 'none';
-//                 fetch(form.action, {
-//                     method: 'POST',
-//                     body: formData,
-//                     headers: {
-//                         'X-Requested-With': 'XMLHttpRequest', // For Django to identify AJAX request
-//                     }
-//                 })
-//                 .then(response => response.json())
-//                 .then(data => {
-//                     if (data.success) {
-//                         console.log("Subclip created with ID:", data.subclip_id);
-                        
-//                         if (li) {
-//                             console.log('data: ', data);
-//                             li.dataset.video_clip_id = data.video_clip_id;
-//                             li.dataset.current_file = data.current_file;
-//                             li.dataset.cat_id = data.cat_id;
-//                             li.dataset.id = data.subclip_id;
-//                             li.dataset.subclip_id = data.subclip_id;
-//                             li.dataset.main_id = data.main_id;
-//                             li.disabled = false;
-//                             clipId = data.subclip_id;
-//                             li.style.cursor = 'pointer';
-                            
-//                         }
-    
-//                         // Reset the form
-//                         sessionStorage.clear();
-//                         form.reset(); // Clear all inputs in the form
-//                         console.log('Clip Submitted Successfully');
-                        
-//                         form.disabled=false;
-//                         form.style.display='default'
-    
-//                     } else {
-//                         document.getElementById('error-slide').textContent = data.error || "An error occurred.";
-//                     }
-//                 })
-//                 .catch(error => {
-//                     submitCheck =true
-
-//                     console.error("Error submitting form:", error);
-//                     document.getElementById('error-slide').textContent = "An error occurred.";
-//                 })
-//                 .finally(() => {
-//                     // Re-enable the submit button
-//                     document.getElementById('submit-clip').disabled = false;
-//                     document.getElementById('submit-clip').style.cursor = 'pointer';
-    
-//                     // Reset the file input field
-//                     if (fileInput) {
-//                         fileInput.value = ""; // This ensures the file input is cleared
-//                     }
-//                 });
-           
-
-//             }
-//         }
-//     }
-// }
 function attachValidation(formId, clipId) {
     const li = document.getElementById(`current_li_${clipId}`);
     if (li) {
