--- a/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
@@ -2,7 +2,7 @@
 <form   class="popup-content" method="POST" enctype="multipart/form-data"
  id="add-subclip-form"
  hx-post="{{ request.path }}" 
-      hx-target="#form-response" 
+      hx-target="#modal-cont" 
       hx-swap="innerHTML"
     style="grid-template-columns: 0.7fr 1fr;width:100%;">
     <br>
