--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -105,6 +105,11 @@ function openPopup(clipId, selectedText, remainingText) {
         modalContainer.addEventListener('htmx:afterSwap', function (event) {
             if (event.detail.target === modalContainer) {
                 popup.style.display = 'flex';
+                document.getElementById('add-subclip-form').addEventListener('submit', (e) => {
+                    e.preventDefault();
+                    attachValidation('add-subclip-form', clipId);
+                })
+
             }
         }, { once: true }); 
 
