--- a/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
@@ -181,7 +181,7 @@ function attachValidation(formId, clipId) {
             });
 
             // Open and send the request
-            xhr.open('POST', `/add_subcliphtmx/${clipId}/`);
+            xhr.open('POST', `text/add_subcliphtmx/${clipId}/`);
             xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
             xhr.send(formData);
         }
