--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -94,7 +94,7 @@
                 .catch(error => console.error('Error fetching clip IDs:', error));
         }
     
-function openPopup(clipId, selectedText, remainingText) {
+    function openPopup(clipId, selectedText, remainingText) {
     const modalContainer = document.getElementById('modal-cont');
     const popup = document.getElementById('add-subclip-popup');
 
@@ -124,7 +124,36 @@ function openPopup(clipId, selectedText, remainingText) {
         console.error("Modal container or popup not found.");
     }
 }
-    
+    function subclipReset(clipID) {
+            const textfileID = "{{textfile.id}}"
+            const url = `/text/reset_subclip/${clipID}/`;
+
+            if (confirm("Are you sure you want to reset this clip?")) {
+                sessionStorage.clear();
+                fetch(url, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value
+                    },
+                    body: JSON.stringify({ textfile_id: textfileID })
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.success) {
+                            // alert("Clip reset successfully!");
+                            location.reload();
+                        } else {
+                            alert("Failed to reset the clip. Please try again.");
+                        }
+                    })
+                    .catch(error => {
+                        console.error("Error resetting clip:", error);
+                        alert("An error occurred. Please try again later.");
+                    });
+            }
+        }
+
     async function fetchNoSubclipIds() {
         try {
             textfileId = textfile_id
