--- a/templates/vlc/frontend/VLSMaker/test_scene/edit_subclip.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/edit_subclip.html
@@ -8,13 +8,13 @@
 
     <div id="submit-cont">
         <div class="form-group">
-            <input id="slide_text" hidden  name="slide_text" value="{{selected_text}}" readonly required class="form-input">
+            <input id="slide_text" hidden  name="slide_text" value="some text" readonly required class="form-input">
         </div>
         
         <input id="clipId" type="number" hidden name="clipId" value="1">
         <!-- <input type="hidden" name="textfile_id" value="{{textfile.id}}"> -->
 
-        <input type="text" value="{{remaining_text}}" hidden id="remaining" name="remaining">
+        <input type="text" value="some text" hidden id="remaining" name="remaining">
         <div style="display: grid;grid-template-columns: 0.7fr 1fr;border-radius: 8px;border: 1px solid #00000080;overflow: hidden;"  class="form-grid-cont">
         <div class="grid-item title  form-grid-item begin column-1"><span style="height:50px;align-items: center;">Upload Scene</span></div>
         <div class="grid-item title form-grid-item end column-2"><span style="height:50px;align-items: center;margin-left: -18px;">Upload Scene From Assets Folder</span></div>
