--- a/templates/vlc/frontend/VLSMaker/test_scene/edit_subclip.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/edit_subclip.html
@@ -61,7 +61,7 @@
 </form>
 <script>
 function attachValidation(formId, clipId) {
-    const li = document.getElementById(`current_li_${clipId}`);
+    const li = document.getElementById(`saved_li_${clipId}`);
     if (li) {
         li.disabled = true;
         li.style.cursor = 'wait';
@@ -144,7 +144,7 @@ function attachValidation(formId, clipId) {
             });
 
             // Open and send the request
-            xhr.open('POST', `/text/add_subcliphtmx/${clipId}/`);
+            xhr.open('POST', `/text/edit_subcliphtmx/${clipId}/`);
             xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
             xhr.send(formData);
         }
