--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -331,7 +331,7 @@
                 popup.style.display = 'flex';
                 document.getElementById('add-subclip-form').addEventListener('submit', (e) => {
                     e.preventDefault();
-                    attachValidation('add-subclip-form', id);
+                    editAttachValidation('edit-subclip-form', id);
                 })
 
             }
