--- a/templates/vlc/frontend/VLSMaker/test_scene/edit_subclip.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/edit_subclip.html
@@ -1,6 +1,6 @@
 
 <form   class="popup-content" method="POST" enctype="multipart/form-data"
- id="add-subclip-form"
+ id="edit-subclip-form"
  
     style="grid-template-columns: 0.7fr 1fr;width:100%;">
     <br>
@@ -64,7 +64,7 @@
     </div>
 </form>
 <script>
-function attachValidation(formId, clipId) {
+function editAttachValidation(formId, clipId) {
     const li = document.getElementById(`saved_li_${clipId}`);
     if (li) {
         li.disabled = true;
@@ -148,7 +148,7 @@ function attachValidation(formId, clipId) {
             });
 
             // Open and send the request
-            xhr.open('POST', `/text/edit_subcliphtmx/${clipId}/`);
+            xhr.open('POST', `{{request.path}}`);
             xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
             xhr.send(formData);
         }
