--- a/templates/vlc/frontend/VLSMaker/test_scene/edit_subclip.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/edit_subclip.html
@@ -40,8 +40,8 @@
         <div style="border-left:0.8px solid #864AF9" class="form-grid-item ">
 
         <div  class="form-group">
-
-            <select id="selected_topic" onchange="fetchVideoClips(this)" name="selected_topic" class="form-select">
+            {% if subclip.video_clip %}
+            <select id="selected_topic" value="{{subclip.video_clip.category.id}}" onchange="fetchVideoClips(this)"   name="selected_topic" class="form-select">
                 <option value="">Select Topic</option>
                 {%for cat in categories%}
                     <option value="{{cat.id}}">{{cat.name}}</option>
@@ -50,7 +50,7 @@
         </div>
         
         <div class="form-group">
-            <select id="videoSelect"  onclick="saveInput(this)" name="selected_video" class="form-select">
+            <select id="videoSelect" value="{{subclip.video_clip.id}}" onclick="saveInput(this)" name="selected_video" class="form-select">
                 <option value="" disabled selected>Select A Video Clip</option>
 
             </select>
@@ -156,13 +156,16 @@
 // }
 
 function restoreSelectFields(){
+    const topic=document.getElementById('selected_topic')
+    const videoClip=document.getElementById('videoSelect')
     if ('{{subclip.video_clip}}'){
-        const topic=document.getElementById('selected_topic')
-        const videoClip=document.getElementById('videoSelect')
         topic.value= '{{subclip.video_clip.category.id}}'
         fetchVideoClips(topic)
-        videoClip.value= '{{subclip.video_clip.id}}'
+        // videoClip.value= '{{subclip.video_clip.id}}'
 
+    }else{
+        topic.value=''
+        videoClip.value=''
     }
 };
 restoreSelectFields();
