--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -316,7 +316,7 @@
     if (li) {
         li.disabled = true;
         li.style.cursor = 'wait';
-        console.log(li, ' has been disabled');
+        console.log(li.dataset.id, ' has been disabled');
     }
 
     const form = document.getElementById(formId);
@@ -354,7 +354,7 @@
 
                         // Show success message
                         const successMessage = document.createElement('div');
-                        successMessage.textContent = 'Clip added successfully!';
+                        successMessage.textContent = 'Clip Updated Successfully!';
                         successMessage.style.position = 'fixed';
                         successMessage.style.top = '20px';
                         successMessage.style.right = '20px';
@@ -395,7 +395,7 @@
             });
 
             // Open and send the request
-            xhr.open('POST', `{{request.path}}`);
+            xhr.open('POST',`/text/edit_subcliphtmx/${id}/`);
             xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
             xhr.send(formData);
         }
