--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -423,7 +423,7 @@
                 popup.style.display = 'flex';
                 document.getElementById('edit-subclip-form').addEventListener('submit', (e) => {
                     e.preventDefault();
-        editAttachValidation('edit-subclip-form', id,getUrl,li);
+        editAttachValidation('edit-subclip-form', id,getUrl,liItem);
                 })
 
             }
