--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -406,7 +406,7 @@
 
         }else{
             liItem.disabled=true
-            li.style.cursor = 'wait';
+            liItem.style.cursor = 'wait';
 
         console.log(liItem)
         id=liItem.dataset.id;
