--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -125,6 +125,9 @@
     }
 }
     function subclipReset(clipID) {
+        const grid= document.getElementById(`grid_${clipID}`)
+        // grid.disabled=true
+        // grid.style.cursor='wait'
             const textfileID = "{{textfile.id}}"
             const url = `/text/reset_subclip/${clipID}/`;
 
