--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -97,7 +97,12 @@
     function openPopup(clipId, selectedText, remainingText) {
     const modalContainer = document.getElementById('modal-cont');
     const popup = document.getElementById('add-subclip-popup');
+    const errorElements = document.querySelectorAll('[id^="error"]');
+        sessionStorage.clear();
 
+        errorElements.forEach(element => {
+            element.textContent = "";
+        });
     if (modalContainer && popup) {
         const getUrl = `/text/add_subcliphtmx/${clipId}/?selectedText=${selectedText}&remainingText=${remainingText}`;
         popup.style.display = 'none';
