--- a/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
@@ -11,7 +11,7 @@
             <input id="slide_text" hidden  name="slide_text" value="{{selected_text}}" readonly required class="form-input">
         </div>
         
-        <input id="clipId" type="number" hidden name="clipId" value="1">
+        <input id="clipId" type="number" hidden name="clipId" value="{{clipId}}">
         <!-- <input type="hidden" name="textfile_id" value="{{textfile.id}}"> -->
 
         <input type="text" value="{{remaining_text}}" hidden id="remaining" name="remaining">
